includedir = $(prefix)/include/prelude-manager


noinst_HEADERS = 			\
	idmef-message-scheduler.h 	\
	libmissing.h			\
	manager-auth.h			\
	pconfig.h			\
	pmsg-to-idmef.h			\
	reverse-relaying.h		\
	server-logic.h			\
	server-generic.h		\
	sensor-server.h			

include_HEADERS = 			\
		plugin-decode.h		\
		plugin-report.h		\
		plugin-filter.h		\
		plugin-util.h		\
		report.h		\
	 	decode.h		

