includedir = $(prefix)/include/prelude-manager


noinst_HEADERS = 			\
        idmef-message-scheduler.h 	\
        libmissing.h 			\
        manager-auth.h 			\
        manager-options.h 		\
        pmsg-to-idmef.h 		\
        reverse-relaying.h 		\
        server-logic.h 			\
        server-generic.h 		\
        sensor-server.h                        

include_HEADERS = 		\
	prelude-manager.h
