includedir = $(prefix)/include/prelude-manager


noinst_HEADERS = 			\
	bufpool.h			\
	decode-plugins.h		\
	filter-plugins.h		\
        idmef-message-scheduler.h 	\
        libmissing.h 			\
        manager-auth.h 			\
        manager-options.h 		\
        pmsg-to-idmef.h 		\
	report-plugins.h		\
        reverse-relaying.h 		\
        server-generic.h 		\
        sensor-server.h                        

include_HEADERS = 		\
	prelude-manager.h
