AM_CPPFLAGS = -I$(top_srcdir)/src/include -I$(top_srcdir)/libmissing @LIBPRELUDE_CFLAGS@
AM_CFLAGS = @GLOBAL_CFLAGS@

idmef_criteria_la_SOURCES = idmef-criteria.c
idmef_criteria_la_LDFLAGS = -module -avoid-version
idmef_criteriadir = $(libdir)/prelude-manager/filters
idmef_criteria_LTLIBRARIES = idmef-criteria.la
