AM_CPPFLAGS = -I$(top_srcdir)/src/include -I$(top_srcdir)/libmissing @LIBPRELUDE_CFLAGS@
AM_CFLAGS = @GLOBAL_CFLAGS@

thresholding_la_SOURCES = thresholding.c
thresholding_la_LDFLAGS = -module -avoid-version
thresholdingdir = $(libdir)/prelude-manager/filters
thresholding_LTLIBRARIES = thresholding.la
